<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovePorto</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="welcome">WELCOME</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="log_me_out">Log me out</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_register_me">Sign up!</string>
    <string name="buy_use">Buy a bike pass</string>
    <string name="title_activity_buy_pass">BuyPassActivity</string>
    <string name="hourly_pass">Hourly Pass</string>
    <string name="daily_pass">Daily Pass</string>
    <string name="weekly_pass">Weekly Pass</string>
    <string name="monthly_pass">Monthly Pass</string>
    <string name="yearly_pass">Yearly Pass</string>
    <string name="welcome_">"Welcome, "</string>
    <string name="change_pass">"Change Pass"</string>
    <string name="confirm_buy">"Do you really wish to buy this pass?"</string>
    <string name="buy_pass">"Confirm buy"</string>

</resources>
